--- a/apps/angular/projection/src/app/ui/card/card.component.html
+++ b/apps/angular/projection/src/app/ui/card/card.component.html
@@ -22,6 +22,6 @@
   <button
     class="border border-blue-500 bg-blue-300 p-2 rounded-sm"
     (click)="addNewItem()">
-    Add
+    Add new
   </button>
 </div>
